Add Docker support and cron scheduling (Phase 2)
- Add scheduler.py with APScheduler-based cron scheduling
- Add Dockerfile and docker-compose.yml for container deployment
- Add --schedule and --cron CLI flags for service mode
- Add schedule_enabled/schedule_cron config fields (YAML + env vars)
- Update README with Docker usage and service mode instructions
- Update config.example.yaml with schedule section
- Add apscheduler to requirements.txt

--- a/config.example.yaml
+++ b/config.example.yaml
@@ -12,3 +12,8 @@ scan:
   force_overwrite: false            # Re-evaluate items that already have a subtitle set
 
 workers: 8                          # Number of parallel threads
+
+# Schedule mode — run as a persistent service instead of one-shot
+schedule:
+  enabled: false
+  cron: "0 3 * * *"                 # Standard 5-field cron: minute hour day month weekday
