--- a/config.example.yaml
+++ b/config.example.yaml
@@ -17,3 +17,8 @@ workers: 8                          # Number of parallel threads
 schedule:
   enabled: false
   cron: "0 3 * * *"                 # Standard 5-field cron: minute hour day month weekday
+
+# Watch mode — real-time WebSocket listener for media changes (no Plex Pass required)
+watch:
+  enabled: false
+  debounce: 5.0                     # Seconds to batch events before processing
