--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,4 @@ plexapi>=4.15.0
 requests>=2.28.0
 pyyaml>=6.0
 apscheduler>=3.10.0   # Optional: only needed for --schedule mode
+websocket-client>=1.6.0  # Optional: only needed for --watch mode
