Add content analysis, external subtitle preference, and docs overhaul (v1.3.0)
Detection:
- Content analysis for unlabeled Chinese subtitles using 90 Traditional-
  Simplified character pairs (downloads up to 50KB, multi-encoding support)
- External subtitle bonus (+2 tiebreaker for .srt/.ass over embedded)
- Skip items with no subtitle streams (burned-in only)

Config & UX:
- Default fallback changed from "skip" to "chs" (prefer Chinese over nothing)
- Default cron changed from daily to weekly Sunday (watcher handles real-time)
- Fix Ctrl+C not working on Windows in service mode
- Suppress urllib3 debug log noise with -v flag
- Fix display_title in debug logs to show "Series S01E02" format

Docs:
- Split README into English (README.md) + Traditional Chinese (README.zh-TW.md)
  with language toggle links
- Add exe (PyInstaller) usage instructions
- Add scoring table with content analysis (+85) and modifiers section
- Add environment variables reference table

Tests: 116 passing (21 new for content analysis, external bonus, subtitle
fetching, and no-subs skip logic)

--- a/config.example.yaml
+++ b/config.example.yaml
@@ -8,7 +8,7 @@ plex:
 
 scan:
   range_days: 30                    # Scan items updated within N days. null = full scan.
-  fallback: skip                    # When no CHT found: skip | english | chs | none
+  fallback: chs                     # When no CHT found: chs | english | skip | none
   force_overwrite: false            # Re-evaluate items that already have a subtitle set
 
 workers: 8                          # Number of parallel threads
@@ -16,7 +16,7 @@ workers: 8                          # Number of parallel threads
 # Schedule mode — run as a persistent service instead of one-shot
 schedule:
   enabled: false
-  cron: "0 3 * * *"                 # Standard 5-field cron: minute hour day month weekday
+  cron: "0 3 * * 0"                 # Weekly Sunday 03:00 (watcher handles real-time updates)
 
 # Watch mode — real-time WebSocket listener for media changes (no Plex Pass required)
 watch:
